2012-11-29 (1.7.6)
  * Add GeneratorState#merge alias for JRuby, fix state accessor methods. Thx to
   jvshahid@github.
2012-08-17 (1.7.5)
  * Fix compilation of extension on older rubies.
2012-07-26 (1.7.4)
  * Fix compilation problem on AIX, see https://github.com/flori/json/issues/142
2012-05-12 (1.7.3)
  * Work around Rubinius encoding issues using iconv for conversion instead.
2012-05-11 (1.7.2)
  * Fix some encoding issues, that cause problems for  the pure and the
    extension variant in jruby 1.9 mode.
2012-04-28 (1.7.1)
  * Some small fixes for building
2012-04-28 (1.7.0)
  * Add JSON::GenericObject for method access to objects transmitted via JSON.
2012-04-27 (1.6.7)
  * Fix possible crash when trying to parse nil value.
2012-02-11 (1.6.6)
  * Propagate src encoding to values made from it (fixes 1.9 mode converting
    everything to ascii-8bit; harmless for 1.8 mode too) (Thomas E. Enebo
    <tom.enebo@gmail.com>), should fix
    https://github.com/flori/json/issues#issue/119.
  * Fix https://github.com/flori/json/issues#issue/124 Thx to Jason Hutchens.
  * Fix https://github.com/flori/json/issues#issue/117
2012-01-15 (1.6.5)
  * Vit Ondruch <v.ondruch@tiscali.cz> reported a bug that shows up when using
    optimisation under GCC 4.7. Thx to him, Bohuslav Kabrda
    <bkabrda@redhat.com> and Yui NARUSE <naruse@airemix.jp> for debugging and
    developing a patch fix.
2011-12-24 (1.6.4)
  * Patches that improve speed on JRuby contributed by Charles Oliver Nutter
    <headius@headius.com>.
  * Support object_class/array_class with duck typed hash/array.
2011-12-01 (1.6.3)
  * Let JSON.load('') return nil as well to make mysql text columns (default to
    '') work better for serialization.
2011-11-21 (1.6.2)
  * Add support for OpenStruct and BigDecimal.
  * Fix bug when parsing nil in quirks_mode.
  * Make JSON.dump and JSON.load methods better cooperate with Rails' serialize
    method. Just use: serialize :value, JSON