@@ -3,18 +3,17 @@ bundler_args: --binstubs
 
 # Specify which ruby versions you wish to run your tests on, each version will be used
 rvm:
-  - 1.8.6
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - ree
   - rbx-18mode
   - rbx-19mode
-  - ree
   - jruby-18mode
   - jruby-19mode
   - ruby-head
 matrix:
   allow_failures:
-    - rvm: 1.8.6
-
+    - rvm: rbx-18mode
+    - rvm: rbx-19mode
 script: "bundle exec rake"
