@@ -6,11 +6,4 @@ gemspec :name => 'json'
 gemspec :name => 'json_pure'
 gemspec :name => 'json-java'
 
-group :development, :test do
-  gem 'simplecov', :platform => :mri_19
-  gem 'utils'
-end
-
-group :test do
-  gem 'test-unit', '~> 2.5', :platform => :mri_19
-end
+gem 'utils'
