@@ -1,6 +1,7 @@
 2012-11-29 (1.7.6)
   * Add GeneratorState#merge alias for JRuby, fix state accessor methods. Thx to
    jvshahid@github.
+  * Increase hash likeness of state objects.
 2012-08-17 (1.7.5)
   * Fix compilation of extension on older rubies.
 2012-07-26 (1.7.4)
